--- a/client/user/src/mealorder/menu/meal-order-drawer.html
+++ b/client/user/src/mealorder/menu/meal-order-drawer.html
@@ -88,7 +88,7 @@
             }
 
             _changehistoryUrl() {
-                if (this.routeData.page.startsWith('history')) {
+                if (this.routeData.page) {
                     const newRouteData = {};
                     newRouteData.page = 'history/' + '#/' + this.currentDate;
                     this.set('routeData', newRouteData);
