Add change user cart action

--- a/client/user/src/mealorder/shell/actions/user-actions.html
+++ b/client/user/src/mealorder/shell/actions/user-actions.html
@@ -21,6 +21,7 @@
 <script>
     const UserAction = {
         MENU_FOR_DAY: "MENU_FOR_DAY",
+        CART_FOR_DAY: 'CART_FOR_DAY',
         REMOVE_DISH : "REMOVE_DISH"
     }
 </script>
