Rename the `ArrayAction` to the `UserAction` action

--- a/client/user/src/mealorder/menu/meal-order-menu-order.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-order.html
@@ -163,7 +163,7 @@
                     },
                     cartForDay(date) {
                         return {
-                            type: ArrayAction.CART_FOR_DAY,
+                            type: UserAction.CART_FOR_DAY,
                             date: date
                         }
                     },
