Add `routeData` to properties

--- a/client/user/src/mealorder/menu/meal-order-menu-order.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-order.html
@@ -150,6 +150,9 @@
                         type: Array,
                         statePath: 'menuForDay'
                     },
+                    routeData: {
+                        type: Object,
+                    }
                 };
             }
 
