--- a/client/user/src/mealorder/meal-order-main-app.html
+++ b/client/user/src/mealorder/meal-order-main-app.html
@@ -211,9 +211,6 @@
                         <div class="container">
                             <div class="order-container">
                                 <div class="main-title">Заказ обедов</div>
-                                <div class="date-container">
-                                    <div class="calendar">Март&nbsp;2018</div>
-                                </div>
                             </div>
                             <iron-pages
                                     selected="[[routeData.page]]"
@@ -239,7 +236,7 @@
                                     </div>
                                     <div class="icon-container">
                                         <a href="/#/menu/">
-                                            <iron-icon class="history-icon" icon="maps:icons:create"></iron-icon>
+                                            <iron-icon class="history-icon" icon="maps:icons:add"></iron-icon>
                                         </a>
                                         <div>
                                             <iron-icon class="order" icon="icons:date-range"
