--- a/client/user/src/mealorder/menu/meal-order-drawer.html
+++ b/client/user/src/mealorder/menu/meal-order-drawer.html
@@ -53,7 +53,7 @@
             <meal-order-user-cart name="menu" order="[[order]]"
                                   on-dish-removed="_removeDishFromOrder"></meal-order-user-cart>
             <app-datepicker name="history" id="date-picker" view="vertical"
-                            date="{{currentDate}}" auto-update-date="true"></app-datepicker>
+                            date="{{currentDate}}" auto-update-date="true" locale="ru-RU"></app-datepicker>
         </iron-pages>
     </template>
 
