--- a/client/user/src/mealorder/meal-order-main-app.html
+++ b/client/user/src/mealorder/meal-order-main-app.html
@@ -68,7 +68,9 @@
             }
 
             static get properties() {
-                return {}
+                return {
+                    routeData: {}
+                }
             }
         }
 
