Change window context for redux to application

--- a/client/user/src/mealorder/shell/reducers/reducers.html
+++ b/client/user/src/mealorder/shell/reducers/reducers.html
@@ -19,7 +19,7 @@
   -->
 <script>
     {
-        window.reducer = (state, action) => {
+        MealOrderApp.reducer = (state, action) => {
             if (!state) {
                 return initialState;
             }
@@ -28,7 +28,6 @@
                     return state;
             }
         }
-        ;
     }
 
 </script>
