Refactor naming and styles

--- a/client/user/index.html
+++ b/client/user/index.html
@@ -30,6 +30,7 @@
     <title>MealOrder</title>
     <style>
         body {
+            font-family: 'Roboto', 'Noto', sans-serif;
             background-color: #F2F2F2;
         }
     </style>
