Set namespace for ReduxMixin

--- a/client/user/src/mealorder/meal-order-main-app.html
+++ b/client/user/src/mealorder/meal-order-main-app.html
@@ -62,7 +62,7 @@
     </template>
 
     <script>
-        class MealOrderMainApp extends ReduxMixin(Polymer.Element) {
+        class MealOrderMainApp extends MealOrderMainApp.ReduxMixin(Polymer.Element) {
             static get is() {
                 return 'meal-order-main-app';
             }
