--- a/client/user/src/mealorder/menu/meal-order-menu-order.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-order.html
@@ -24,6 +24,8 @@
 <link rel="import" href="../../../bower_components/app-route/app-route.html">
 <link rel="import" href="../../../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../shell/redux-store.html">
+<link rel="import" href="../shell/actions/user-actions.html">
+
 <link rel="import" href="../../../bower_components/polymer/lib/elements/dom-repeat.html">
 <dom-module id="meal-order-menu-order">
     <template>
@@ -104,7 +106,7 @@
                 </paper-tab>
             </template>
         </paper-tabs>
-
+        <meal-order-vendor-menus items="[[menu]]" on-dish-added="_addDishToOrder"></meal-order-vendor-menus>
     </template>
     <script>
         /**
@@ -118,7 +120,7 @@
          * @polymer
          * @ReduxMixin
          */
-        class MealOrderMenuOrder extends ReduxMixin(Polymer.Element) {
+        class MealOrderMenuOrder extends  MealOrderApp.ReduxMixin(Polymer.Element) {
             static get is() {
                 return 'meal-order-menu-order';
             }
@@ -196,7 +198,7 @@
                 this.dispatch('cartForDay', this.menuForDates[e.model.index].date);
             }
 
-            addDishToOrder(e) {
+            _addDishToOrder(e) {
                 this.dispatchEvent(new CustomEvent('dish-added', {detail: e.detail}));
             }
 
