--- a/client/user/src/mealorder/shell/actions/user-actions.html
+++ b/client/user/src/mealorder/shell/actions/user-actions.html
@@ -22,5 +22,6 @@
     const UserAction = {
         MENU_FOR_DAY: "MENU_FOR_DAY",
         CART_FOR_DAY: 'CART_FOR_DAY',
+        ADD_DISH: "ADD_DISH",
     }
 </script>
