Refactor global vars

--- a/client/user/src/mealorder/shell/actions/user-actions.html
+++ b/client/user/src/mealorder/shell/actions/user-actions.html
@@ -19,6 +19,7 @@
   -->
 
 <script>
+    /global
     const UserAction = {
         MENU_FOR_DAY: "MENU_FOR_DAY",
         CART_FOR_DAY: 'CART_FOR_DAY',
