Add redux global variables

--- a/client/user/src/mealorder/shell/reducers/reducers.html
+++ b/client/user/src/mealorder/shell/reducers/reducers.html
@@ -19,6 +19,8 @@
   -->
 <script>
     {
+        MealOrderMainApp.initialState = {};
+
         MealOrderApp.reducer = (state, action) => {
             if (!state) {
                 return initialState;
