Refactor globals var

--- a/client/user/src/mealorder/menu/meal-order-menu-order.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-order.html
@@ -104,7 +104,8 @@
                 </paper-tab>
             </template>
         </paper-tabs>
-        <meal-order-vendor-menus items="[[menu]]" on-dish-added="_addDishToOrder"></meal-order-vendor-menus>
+        <meal-order-vendor-menus items="[[menu]]"
+                                 on-dish-added="_addDishToOrder"></meal-order-vendor-menus>
     </template>
     <script>
         /**
