Fix global scope for redux

--- a/client/user/src/mealorder/shell/reducers/reducers.html
+++ b/client/user/src/mealorder/shell/reducers/reducers.html
@@ -19,11 +19,11 @@
   -->
 <script>
     {
-        MealOrderMainApp.initialState = {};
+        MealOrderApp.initialState = {};
 
         MealOrderApp.reducer = (state, action) => {
             if (!state) {
-                return initialState;
+                return MealOrderApp.initialState;
             }
             switch (action.type) {
                 default :
