Add reducer to global namespace

--- a/client/user/src/mealorder/shell/reducers/reducers.html
+++ b/client/user/src/mealorder/shell/reducers/reducers.html
@@ -19,11 +19,11 @@
   -->
 <script>
     {
-        MealOrderApp.initialState = {};
+        const initialState = {};
 
-        MealOrderApp.reducer = (state, action) => {
+        reducer = (state, action) => {
             if (!state) {
-                return MealOrderApp.initialState;
+                return initialState;
             }
             switch (action.type) {
                 default :
