Refactor `dish-add` custom event to action

--- a/client/user/src/mealorder/menu/meal-order-menu-order.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-order.html
@@ -168,6 +168,12 @@
                             date: date
                         }
                     },
+                    addDish(dish) {
+                        return {
+                            type: UserAction.ADD_DISH,
+                            dish: dish
+                        }
+                    },
                 }
             }
 
@@ -198,7 +204,7 @@
             }
 
             _addDishToOrder(e) {
-                this.dispatchEvent(new CustomEvent('dish-added', {detail: e.detail}));
+                this.dispatch('addDish', e.detail);
             }
 
         }
