--- a/client/user/src/mealorder/shell/redux-store.html
+++ b/client/user/src/mealorder/shell/redux-store.html
@@ -20,6 +20,7 @@
 
 <link rel="import" href="../../../bower_components/polymer-redux/polymer-redux.html">
 <script>
+    /* global Redux */
     {
         const store = Redux.createStore(reducer);
         window.MealOrderApp = {};
