Add comment for global variables

--- a/client/user/src/mealorder/shell/redux-store.html
+++ b/client/user/src/mealorder/shell/redux-store.html
@@ -22,6 +22,7 @@
 <link rel="import" href="reducers/reducers.html">
 <script>
     {
+        /* global Redux, PolymerRedux */
         const store = Redux.createStore(reducer);
 
         window.MealOrderApp = {};
