--- a/client/user/src/mealorder/shell/actions/user-actions.html
+++ b/client/user/src/mealorder/shell/actions/user-actions.html
@@ -19,8 +19,7 @@
   -->
 
 <script>
-    /*exported UserAction*/
-    const UserAction = {
+    MealOrderApp.UserAction = {
         MENU_FOR_DAY: "MENU_FOR_DAY",
         CART_FOR_DAY: 'CART_FOR_DAY',
         ADD_DISH: "ADD_DISH",
