Refactor `UserAction` as MealOrderApp global

--- a/client/user/src/mealorder/menu/meal-order-menu-order.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-order.html
@@ -158,19 +158,19 @@
                 return {
                     menuForDay(date) {
                         return {
-                            type: UserAction.MENU_FOR_DAY,
+                            type: MealOrderApp.UserAction.MENU_FOR_DAY,
                             date: date
                         }
                     },
                     cartForDay(date) {
                         return {
-                            type: UserAction.CART_FOR_DAY,
+                            type: MealOrderApp.UserAction.CART_FOR_DAY,
                             date: date
                         }
                     },
                     addDish(dish) {
                         return {
-                            type: UserAction.ADD_DISH,
+                            type: MealOrderApp.UserAction.ADD_DISH,
                             dish: dish
                         }
                     },
