Refactor names, namespaces

--- a/client/user/index.html
+++ b/client/user/index.html
@@ -26,7 +26,7 @@
     <script src="bower_components/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="node_modules/redux/dist/redux.js"></script>
     <link rel="icon" href="images/favicon-16x16.png" type="image/png">
-    <link rel=import href="src/mealorder/meal-order-main-app.html">
+    <link rel=import href="src/mealorder/meal-order-client-app.html">
     <title>MealOrder</title>
     <style>
         body {
@@ -35,6 +35,6 @@
     </style>
 </head>
 <body>
-<meal-order-main-app></meal-order-main-app>
+<meal-order-client-app></meal-order-client-app>
 </body>
 </html>
