--- a/client/user/src/mealorder/shell/reducers/reducers.html
+++ b/client/user/src/mealorder/shell/reducers/reducers.html
@@ -21,7 +21,7 @@
     {
         const initialState = {};
 
-        reducer = (state, action) => {
+        MealOrderApp.reducer = (state, action) => {
             if (!state) {
                 return initialState;
             }
