--- a/client/user/src/mealorder/meal-order-client-app.html
+++ b/client/user/src/mealorder/meal-order-client-app.html
@@ -35,6 +35,7 @@
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../bower_components/iron-icons/maps-icons.html">
 <link rel="import" href="shell/redux-store.html">
+<link rel="import" href="menu/meal-order-menu-order.html">
 <dom-module id="meal-order-client-app">
     <template>
         <style>
@@ -276,7 +277,7 @@
          * @polymer
          * @ReduxMixin
          */
-        class MealOrderClientApp extends MealOrderMainApp.ReduxMixin(Polymer.Element) {
+        class MealOrderClientApp extends MealOrderApp.ReduxMixin(Polymer.Element) {
             static get is() {
                 return 'meal-order-client-app';
             }
